# docker/engine/app/schemas/schedulers/schedule_schema.py
@@ -1,6 +1,6 @@
 from flask_marshmallow import Schema
 from marshmallow import validates_schema, ValidationError
-from engine.app.models.intern.exams import Exams
+from engine.app.models.intern.scheduling import Scheduling
 from engine.app.schemas.types import Types
 from engine.app.utils.validators.identifier_validator import validate_identifier
 from engine.app.utils.validators.date_validator import validate_date
@@ -9,50 +9,50 @@ import logging
 log = logging.getLogger("Higia." + __name__)
 
 
-class ExamSchema(Schema):
+class ScheduleSchema(Schema):
     class Meta:
-        model = Exams
+        model = Scheduling
 
     patient_identifier = Types.String(required=True)
-    exam_type = Types.String(required=True)
-    exam_local = Types.String(required=True)
-    exam_date = Types.String(required=True)
-    patient = Types.String(required=True)
     patient_name = Types.String(required=True)
-    doctor = Types.String(required=True)
-    doctor_name = Types.String(required=True)
-    validity = Types.String(required=True)
-    result = Types.String()
-
-    @validates_schema
-    def validate_data(self, data, **kwargs):
-        if not validate_identifier(data.get('patient_identifier')):
-            log.error("The identifier format is incorrect.")
-            raise ValidationError("Invalid identifier, the correct format must contain 11 numbers.")
-        if not validate_date(data.get('exam_date')) or not validate_date(data.get('validity')):
-            log.error("Invalid date format.")
-            raise ValidationError("Invalid date format, please follow the instruction model.")
-
-
-class ExamUpdateSchema(Schema):
-    class Meta:
-        model = Exams
-
-    patient_identifier = Types.String()
-    exam_type = Types.String()
-    exam_local = Types.String()
-    exam_date = Types.String()
-    validity = Types.String()
-    result = Types.String()
+    local = Types.String(required=True)
+    appointment_day = Types.String(required=True)
+    return_date = Types.String()
+    description = Types.String()
+    specialty = Types.String(required=True)
+    details = Types.String()
 
     @validates_schema
     def validate_data(self, data, **kwargs):
         if data.get('patient_identifier') and validate_identifier(data.get('patient_identifier')):
             log.error("The identifier format is incorrect.")
             raise ValidationError("Invalid identifier format, the correct format must contain 11 chars.")
-        if data.get('exam_date') and not validate_date(data.get('exam_date')):
+        if not validate_date(data.get('appointment_day')):
             log.error("Invalid date format.")
             raise ValidationError("Invalid exam date format, please follow the instruction model.")
-        if data.get('validity') and not validate_date(data.get('exam_date')):
+
+
+class ScheduleUpdateSchema(Schema):
+    class Meta:
+        model = Scheduling
+
+    patient_identifier = Types.String()
+    patient_name = Types.String()
+    local = Types.String()
+    appointment_day = Types.String()
+    return_date = Types.String()
+    description = Types.String()
+    specialty = Types.String()
+    details = Types.String()
+
+    @validates_schema
+    def validate_data(self, data, **kwargs):
+        if data.get('patient_identifier') and validate_identifier(data.get('patient_identifier')):
+            log.error("The identifier format is incorrect.")
+            raise ValidationError("Invalid identifier format, the correct format must contain 11 chars.")
+        if data.get('appointment_day') and not validate_date(data.get('appointment_day')):
+            log.error("Invalid date format.")
+            raise ValidationError("Invalid exam date format, please follow the instruction model.")
+        if data.get('return_date') and not validate_date(data.get('return_date')):
             log.error("Invalid date format.")
             raise ValidationError("Invalid validity date format, please follow the instruction model.")
